<resources>
    <string name="app_name">IDVS</string>
    <string name="profile_picture">Profile picture</string>
    <string name="woman_seaching">Woman searching</string>
    <string name="welcome_mr_x">Welcome User</string>
    <string name="click_the_scann_buton_to_continure">Click the scan butTon to continue</string>
    <string name="scann_id">Scan Id</string>
    <string name="message">Loading Message</string>
    <string name="scann_meal_card">Scann meal card</string>

</resources>