<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/search"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="30dp"
        android:contentDescription="@string/profile_picture" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="50dp"
        app:cardElevation="15dp"
        android:id="@+id/profile_card">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="155dp"
                android:layout_height="155dp"
                app:cardCornerRadius="250dp"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/white"
                android:id="@+id/profile_container">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center"
                    >

                    <ImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/police"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/woman_seaching" />

                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/welcomeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/welcome_mr_x"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/click_the_scann_buton_to_continure"
                android:textSize="15sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/idButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/scann_id"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/mealButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/scann_meal_card"
        android:textColor="@color/white" />
</RelativeLayout>